GH-0: [test] Refactor tests to follow new guidelines